opam-version: "2.0"
version: "1.0.0"
synopsis: "Effectful OCaml with Objects and Variants"
maintainer: "Vesa Karvonen <vesa.a.j.k@gmail.com>"
authors: "Vesa Karvonen"
license: "MIT"
homepage: "https://github.com/polytypic/rea-ml"
bug-reports: "https://github.com/polytypic/rea-ml/issues"
dev-repo: "git+https://github.com/polytypic/rea-ml.git"
depends: [
  "dune" {>= "3.3.0"}
  "ocaml" {>= "4.08.0"}
  "ppx_optcomp" {>= "v0.14.0"}
  "ocamlformat" {= "0.23.0" & with-test}
  "odoc" {>= "2.1.1" & with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
